[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/UFO Main/enemies/turret1.png" type="Texture" id=1]
[ext_resource path="res://assets/UFO Main/enemies/turret2.png" type="Texture" id=2]
[ext_resource path="res://assets/UFO Main/enemies/turret3.png" type="Texture" id=3]
[ext_resource path="res://actors/enemies/turret/Turret.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AnimatedSprite" type="AnimatedSprite"]
frames = SubResource( 1 )
script = ExtResource( 4 )

[node name="SpawnMissile" type="Node2D" parent="."]
position = Vector2( 0, -26 )

[node name="spawnRocketTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="spawnRocketTimer" to="." method="_on_spawnRocketTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
